CP: replace deprecated methods (texture loader), remove deprecated keyboard controls

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       function init() {
         scene = new THREE.Scene()
-        scene.background = new THREE.ImageUtils.loadTexture(
+        scene.background = new THREE.TextureLoader().load(
           'resource/background.jpg'
         )
 
@@ -64,29 +64,29 @@
         // 1. adding the FLOOR
         var floorFacesMaterials = [
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture('resource/ground.jpg'),
+            map: new THREE.TextureLoader().load('resource/ground.jpg'),
           }),
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture('resource/ground.jpg'),
+            map: new THREE.TextureLoader().load('resource/ground.jpg'),
           }),
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture(
+            map: new THREE.TextureLoader().load(
               'resource/groundForTopside.jpg'
             ),
           }),
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture(
+            map: new THREE.TextureLoader().load(
               'resource/groundForTopside.jpg'
             ),
           }),
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture('resource/under.jpg'),
+            map: new THREE.TextureLoader().load('resource/under.jpg'),
           }), // UNDER
           new THREE.MeshBasicMaterial({
-            map: new THREE.ImageUtils.loadTexture('resource/floor.jpg'),
+            map: new THREE.TextureLoader().load('resource/floor.jpg'),
           }), // TOPSIDE
         ]
-        var floorPNG = new THREE.ImageUtils.loadTexture('resource/floor.jpg')
+        var floorPNG = new THREE.TextureLoader().load('resource/floor.jpg')
         var floor = new THREE.Mesh(
           new THREE.BoxGeometry(15, 15, 5),
           floorFacesMaterials
@@ -96,9 +96,7 @@
         scene.add(floor)
 
         // 2. adding the walls
-        var wall2PNG = new THREE.ImageUtils.loadTexture(
-          'resource/retrowall.jpg'
-        )
+        var wall2PNG = new THREE.TextureLoader().load('resource/retrowall.jpg')
 
         var wall = new THREE.Mesh(
           new THREE.BoxGeometry(15, 15, 0.15),
@@ -120,7 +118,7 @@
         wall2.position.z = -0.02
         scene.add(wall2)
 
-        var outerwallPNG = new THREE.ImageUtils.loadTexture(
+        var outerwallPNG = new THREE.TextureLoader().load(
           'resource/outerwalls.jpg'
         )
 
@@ -287,9 +285,7 @@
         })
 
         // TV STAND
-        var redWavePNG = new THREE.ImageUtils.loadTexture(
-          'resource/redwave.jpg'
-        )
+        var redWavePNG = new THREE.TextureLoader().load('resource/redwave.jpg')
         var tvStand = new THREE.Mesh(
           new THREE.CylinderGeometry(2, 2, 2, 32),
           new THREE.MeshBasicMaterial({ map: redWavePNG })
@@ -299,7 +295,6 @@
         tvStand.scale.y -= 0.6
         tvStand.scale.x -= 0.8
         tvStand.rotation.z = (90 * Math.PI) / 180
-        //tvStand.rotation.x = 90 * Math.PI/180;
         scene.add(tvStand)
 
         // TV
@@ -337,7 +332,7 @@
         var roombaON = false
         loader.load('models/roomba/scene.gltf', function (gltf) {
           roomba = gltf.scene.children[0]
-          roomba.position.set(3, 0.7, 21)
+          roomba.position.set(3, 0.5, 21)
           roomba.scale.set(3, 3, 3)
           scene.add(roomba)
         })
@@ -359,130 +354,6 @@
 
       var keyboard = new THREEx.KeyboardState()
 
-      function update() {
-        if (keyboard.pressed('e')) {
-          console.log('press')
-          if (roombaON == true) {
-            roombaON = false
-            return
-          }
-          roombaON = true
-        }
-
-        if (roombaON == true) {
-          if (roombaSteps == 0) {
-            roombaDirection = true
-          }
-
-          if (roombaSteps == 900) {
-            roombaDirection = false
-          }
-
-          if (roombaDirection == false) {
-            roombaSteps--
-            roomba.position.x += 0.01
-          }
-
-          if (roombaDirection == true) {
-            roombaSteps++
-            roomba.position.x -= 0.01
-          }
-        }
-
-        if (keyboard.pressed('t')) {
-          if (toggler == true) {
-            scene.remove(spotLight)
-            scene.add(pointLight)
-            toggler = false
-            return
-          }
-
-          // light off
-          scene.remove(pointLight)
-          scene.add(spotLight)
-          toggler = true
-        }
-
-        // water the plant?
-        if (keyboard.pressed('w')) {
-          if (maxInc >= inc) {
-            var newleaf = flowers
-            if (inc % 2 == 0) {
-              newleaf.scale.x = flowers.scale.x + 0.001
-              newleaf.scale.y = flowers.scale.y + 0.001
-              newleaf.scale.z = flowers.scale.z + 0.01
-            }
-            inc += 1
-            scene.add(newleaf)
-          }
-        }
-
-        // channels
-        if (keyboard.pressed('1')) {
-          var cartoonPNG = new THREE.ImageUtils.loadTexture(
-            'resource/rickandmorty.jpg'
-          )
-          var cartoon = new THREE.Mesh(
-            new THREE.CubeGeometry(0.01, 2, 4),
-            new THREE.MeshBasicMaterial({ map: cartoonPNG })
-          )
-          cartoon.position.y = 5
-          cartoon.position.x = -6.9
-          scene.add(cartoon)
-        }
-        if (keyboard.pressed('2')) {
-          var cartoonPNG = new THREE.ImageUtils.loadTexture(
-            'resource/cartoon.jpg'
-          )
-          var cartoon = new THREE.Mesh(
-            new THREE.CubeGeometry(0.01, 2, 4),
-            new THREE.MeshBasicMaterial({ map: cartoonPNG })
-          )
-          cartoon.position.y = 5
-          cartoon.position.x = -6.9
-          scene.add(cartoon)
-        }
-        if (keyboard.pressed('3')) {
-          var cartoonPNG = new THREE.ImageUtils.loadTexture(
-            'resource/acihayat.jpg'
-          )
-          var cartoon = new THREE.Mesh(
-            new THREE.CubeGeometry(0.01, 2, 4),
-            new THREE.MeshBasicMaterial({ map: cartoonPNG })
-          )
-          cartoon.position.y = 5
-          cartoon.position.x = -6.9
-          scene.add(cartoon)
-        }
-        if (keyboard.pressed('0')) {
-          var cartoonPNG = new THREE.ImageUtils.loadTexture()
-          var cartoon = new THREE.Mesh(
-            new THREE.CubeGeometry(0.01, 2, 4),
-            new THREE.MeshBasicMaterial({ map: cartoonPNG })
-          )
-          cartoon.position.y = 5
-          cartoon.position.x = -6.9
-          scene.add(cartoon)
-        }
-
-        if (keyboard.pressed('right')) {
-          if (eggchair.rotation.z <= maxZminus) {
-            return
-          }
-          eggchair.rotation.z -= 0.01
-          dog.rotation.z -= 0.01
-        }
-
-        if (keyboard.pressed('left')) {
-          if (eggchair.rotation.z >= maxZplus) {
-            return
-          }
-          eggchair.rotation.z += 0.01
-          dog.rotation.z += 0.01
-        }
-        controls.update()
-        render()
-      }
       init()
     </script>
   </body>
