--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <li><h2>] - Turn the chair right</h2></li>
       </ul>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="/node_modules/three/examples/jsm/controls/KeyboardState.js"></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
